--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.26.0",
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -40,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-query": "^5.90.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -47,14 +46,16 @@
     "embla-carousel-react": "^8.1.6",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.417.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
+    "react-router-dom": "^6.26.0",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
-    "@hookform/resolvers": "^3.9.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
